# graphite

./: .gitignore  Graphite.spec  README.md  audio_diagnostics.txt  audio_engine.py  audio_settings.json  installer.iss  main.py  project_manager.py  test_daw.py  theme_utils.py
cpp/: CMakeLists.txt  resources.qrc
cpp/src/audio/: AudioEngine.cpp  AudioEngine.h  AudioModels.h  NamAudioProcessor.cpp  NamAudioProcessor.h  NamEffect.cpp  NamEffect.h
cpp/src/core/: main.cpp
cpp/src/gui/: AudioSettingsDialog.cpp  AudioSettingsDialog.h  CustomKnob.cpp  CustomKnob.h  CustomTitleBar.cpp  CustomTitleBar.h  EffectsRack.cpp  EffectsRack.h  LevelMeter.cpp  LevelMeter.h  MainWindow.cpp  MainWindow.h  MixerPanel.cpp  MixerPanel.h  MixerStrip.cpp  MixerStrip.h  SignalFlow.cpp  SignalFlow.h  StyleTheme.cpp  StyleTheme.h  Timeline.cpp  Timeline.h  TrackCard.cpp  TrackCard.h
widgets/: __init__.py  audio_settings.py  effects_rack.py  export_dialog.py  fft_analyzer.py  knob.py  level_meter.py  main_window.py  metronome.py  mixer.py  signal_flow.py  splash.py  timeline.py  track_card.py  tuner.py  undo_redo_manager.py
